--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,15 @@ allprojects {
     }
 }
 
+// KAKAO API
+subprojects {
+    repositories {
+        mavenCentral()
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
+    }
+}
+
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
