--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.VideoActivity"></activity>
-        <activity android:name=".activity.ImageActivity" />
+        <activity android:name=".activity.ContentsActivity" />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
